--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
     <script>
         const firebaseConfig = {
-            apiKey: "AIzaSyChW5bKx67jYT_54q_ll7NFduKNDoSekkY",
-            authDomain: "iot-project-3c0b1.firebaseapp.com",
-            databaseURL: "https://iot-project-3c0b1-default-rtdb.firebaseio.com",
-            projectId: "iot-project-3c0b1",
-            storageBucket: "iot-project-3c0b1.appspot.com",
-            messagingSenderId: "33503766938",
-            appId: "1:33503766938:web:ae6d9b7a7dd41faa557223",
-            measurementId: "G-1MSC5Y4NH5"
-        };
+  apiKey: "AIzaSyAt0lBvf6PjjXD8irv8Duv3u8kGc8WrfV4",
+  authDomain: "seol-6f251.firebaseapp.com",
+  databaseURL: "https://seol-6f251-default-rtdb.firebaseio.com",
+  projectId: "seol-6f251",
+  storageBucket: "seol-6f251.firebasestorage.app",
+  messagingSenderId: "628349191519",
+  appId: "1:628349191519:web:9eb8529db30db6fc5a22ea",
+  measurementId: "G-7G4RTQSMSG"
+};
 
         firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
